--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0px;
 }
+
 /**Navigation**/
 .navigation {
     background-color: var(--primary-color);
@@ -19,7 +20,6 @@ body {
     font-weight: bold;
     text-decoration: none;
     color : white;
-    max-width: 50px;
     margin-left: 1rem;
     margin-top: 1rem;
 }
@@ -42,11 +42,26 @@ body {
     text-decoration: none;
     color : white;
 }
+
 /**header**/
 .hero-header {
-    padding-left: 1rem;
+    padding : 3rem 0rem;
 }
-.hero-header .developer {
-    margin-bottom: 15px;
-    margin-top: 15px;
+.hero-img {
+    max-width: 80%;
+    width : 500px;
+    display : block;
+    margin : auto;
+}
+.hero-heading {
+    text-align: center;
+    margin-bottom: 10px;
+    color : #1F2937;
+}
+.hero-Text {
+    margin-top: 5px;
+    display : block;
+    margin: auto;
+    max-width: 80%;
+    text-align: center;
 }
