--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 :root {
     --primary-color: #4F46E5;
-    --secondary-color: #6B7280;
+    --secondary-color: #1F2937;
     --white-color: #D1D5DB;
 }
 body {
@@ -13,8 +13,9 @@ body {
 .navigation {
     background-color: var(--primary-color);
     color : white;
-    padding: 0.50px;
+    padding: 0.1px;
     border-bottom-left-radius: 1rem;
+    margin-bottom: 1rem;
 }
 .nav-brand {
     font-weight: bold;
@@ -33,7 +34,7 @@ body {
 }
 .nav-list-item {
     display : inline;
-    padding : 0rem 0.5rem;
+    padding : 0rem 0.4rem;
     font-size: 20px;
 }
 .list-items {
@@ -45,7 +46,7 @@ body {
 
 /**header**/
 .hero-header {
-    padding : 3rem 0rem;
+    padding : 1.4rem 0rem;
 }
 .hero-img {
     max-width: 80%;
@@ -64,4 +65,20 @@ body {
     margin: auto;
     max-width: 80%;
     text-align: center;
+}
+
+/**Contact button***/
+.button {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.button-link {
+    text-decoration: none;
+    font-size: 25px;
+    background-color: var(--primary-color);
+    padding: 0.4rem 0.9rem;
+    color: white;
+    border-radius: 1rem;
+    align-self: 20px;
+    justify-self: unset;
 }
