--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     color : white;
     padding: 0.1px;
     border-bottom-left-radius: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 17px;
 }
 .nav-brand {
     font-weight: bold;
