--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --primary-color: #4F46E5;
     --secondary-color: #1F2937;
     --white-color: #D1D5DB;
+    --container-color: #E5E7EB;
 }
 
 body {
