--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     color: white;
     padding: 0.1px;
     border-bottom-left-radius: 1rem;
-    margin-bottom: 17px;
+    margin-bottom: 15px;
 }
 .navigation .nav-brand {
     font-weight: bold;
@@ -110,21 +110,22 @@ body {
     text-align: center;
     font-size: 19px;
     margin-top: 1.5px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .skills-section .skills-icons {
     display: flex;
     flex-direction: row;
     place-content: center;
-    font-size: 50px;
-    gap: 2px;
+    font-size: 53px;
+    gap: 5px;
 }
 
 .container {
     background-color: #E5E7EB;
-    padding: 1rem 1rem;
+    padding: 14px;
     border-radius: 1rem;
+    padding-bottom: 8px;
 }
 
 /*project button*/
@@ -140,7 +141,14 @@ body {
     color: var(--primary-color);
     border-radius: 1rem;
 }
-
+/**===blog section====**/
+.skills-section .blog-icons {
+    display: flex;
+    flex-direction: row;
+    place-content: center;
+    font-size: 30px;
+    gap: 30px;
+}
 
 /**footer**/
 footer {
