chnaged primary color

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root {
-    --primary-color: #4F46E5;
+    --primary-color: #4070F4;
     --secondary-color: #1F2937;
     --white-color: #D1D5DB;
     --container-color: #E5E7EB;
